--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
@@ -18,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/AndreasP-92/blog.git"
   },
-  "proxy" :"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "author": "",
   "license": "ISC",
   "bugs": {
